	  GUI in previous releases...)

    CHANGES

	- Increased default MAX_PAGES to 10000 (was 5000.)
	- File links in book files now point to the top of the
	  next page.
	- <TABLE ALIGN=xyz> now aligns the table (previously it
	  just set the default alignment of cells.)
	- Transparent GIFs now use the body color instead of white
	  for the transparent color.

    BUG FIXES

	- Now ignore illegal HTML in tables.
	- The VALIGN code didn't handle empty cells properly.
	- Wasn't offsetting the start of each row by the cell
	  padding.
	- The JPEG image loading code didn't work for some JPEG
	  images, particularly those from digital cameras (JPEG
	  but not JFIF format.)
	- The strikethrough line was not being drawn in the
	  correct position.
	- Wasn't setting the height of BR elements, so <BR><BR>
	  didn't insert a blank line.
	- The table of contents would show the wrong page numbers
	  if no title page was generated.
	- Cell widths did not subtract any border, padding, or
	  spacing from the "preferred" width, causing formatting
	  differences between web browsers and HTMLDOC.


CHANGES IN HTMLDOC v1.8.6

    NEW FEATURES

	- New linkcolor and linkstyle options.

    CHANGES

	- Minor source changes for OS/2 compilation.
	- SUP and SUB now raise/lower text more to be consistent with
	  browser look-n-feel.
	- Non-breaking space by itself was being output.  Now check for
	  that and ignore strings that consist entirely of whitespace.
	- New progress bar.

    BUG FIXES

	- Didn't add whitespace after a table caption.
	- Nested tables caused formatting problems (flatten_tree()
	  didn't insert breaks for new rows)
	- A cell whose minimum width exceeded the available width
	  for the table would cause the table to go off the page.
	- Cells that spanned more than two pages were drawn with boxes
	  around them rather than just the sides.
	- The stylesheet info in the HTML output specified the H1 size
	  for all headings.